# i486-Emu-And-486C-Compiler

./: CMakeLists.txt  MANUAL.md  Makefile  README.md
docs/: arquitectura_486cc.md  arquitectura_i486.md
examples/486cc/: arithmetic.c486  loop.c486
examples/asm/: arithmetic.asm  vga_text.asm
examples/headers/: device_ports.h486
include/c486cc/: compiler.hpp
include/i486/: bus.hpp  cpu.hpp  devices.hpp  emulator.hpp  memory.hpp
runtime/486cc/include/: i486.h  stdbool.h  stdint.h486  stdio.h  stdlib.h  stdlib.h486  string.h  string.h486
runtime/486cc/src/: string.c486
src/: assembler.cpp  bus.cpp  compiler.cpp  cpu.cpp  devices.cpp  emulator.cpp  memory.cpp  toolchain_cli.cpp
tests/: i486_tests.cpp
